--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -12,12 +12,18 @@
           </tr>
         </thead>
         <tbody>
-          <!--注文履歴一覧をだす-->
-          <!--% @orders.each do |order| %-->
-
-
-          <!--% end %-->
-
+          <% @orders.each do |order| %>
+          <tr>
+            <td class="align-middle link">
+              <%= link_to admin_order_path(order) do %>
+                <%= order.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
+              <% end %>
+            </td>
+            <td class="align-middle link">
+              <%= order.customer.last_name+order.customer.first_name %>
+            </td>
+          </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
