--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,7 +1,7 @@
 
 <h1>ショッピングカート</h1>
 　<div style="display: flex; justify-content: flex-end;">
-  <%= link_to "全部削除",   cart_items_destroy_all_path, class: 'btn btn-primary' %>
+  <%= link_to "全部削除",  cart_items_destroy_all_path, method: :delete, class: 'btn btn-primary' %>
   </div>
 <table class="table table-bordered">
   <thead>
@@ -26,7 +26,7 @@
         <td><%= (cart_item.item.without_tax_price * 1.1).floor * cart_item.quantity %></td>
         <td><%= link_to "削除",    cart_item_path(cart_item.id), method: :delete %></td>
       </tr>
-      <% end %> 
+      <% end %>
     <% end %>
     <tr>
       <td colspan="3">合計金額</td>
@@ -34,9 +34,16 @@
     </tr>
   </tbody>
 </table>
-<%= link_to "買い物を続ける", items_path, class: 'btn btn-primary' %></br>
+<%= link_to "買い物を続ける", root_path, class: 'btn btn-primary' %></br>
 </br>
 </br>
-<div class=" d-flex align-items-center justify-content-center" style="height:100px;">
-<%= link_to "注文情報入力に移動", new_order_path, class: 'btn btn-primary' %> 
-</div>
+<!--<div class=" d-flex align-items-center justify-content-center" style="height:100px;">-->
+<!--<%#= link_to "注文情報入力に移動", new_order_path, class: 'btn btn-primary' %>-->
+<!--</div>-->
+
+
+<% if @empty_cart.blank? %>
+  <div class="d-flex align-items-center justify-content-center" style="height:100px;">
+    <%= link_to "注文情報入力に移動", new_order_path, class: 'btn btn-primary' %>
+  </div>
+<% end %>
