--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,13 +1,16 @@
 <h1>商品一覧(全<%= Item.count %>件)</h1>
-<table>
-  <thead>
-  </thead>
-  <tbody>
+<div class "container " >
+  <div class="row m-2">  
+
     <% @items.each do |item| %>
-     <tr><td><%= link_to image_tag(item.image, width: '100', height: '100'), item_path(item) %></td></tr>
-       <tr> <td><%= item.name %></td></tr>
-       <tr> <td>￥<%= item.without_tax_price %></td><tr>
+    <div class="col-lg-3" > 
+    <div class="">
+     <div> <%= link_to image_tag(item.image, width: '200', height: '200'), item_path(item) %>  </div>
+      <div> <%= item.name %> </div>
+      <div> ￥<%= item.without_tax_price %> </div>
+    </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+  </div>  
+</div>    
 <%= paginate @items %>
