--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -3,7 +3,7 @@
     <h2>商品一覧</h2>
 
       <%= button_to "+", {controller: 'items', action: 'new'}, {method: :get} %>
-      <button type="button" class="btn btn-outline-warning">+</button>
+      <!--<div class="text-center">< link_to "+", new_admin_item_path(@item), class:"btn btn-outline-warning" %></div>-->
 
         <table class="table">
           <thead>
