--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -25,7 +25,7 @@
         </tr>
         <tr>
           <th class="table-active">住所</th>
-          <td><%= @customer.postal_code %></td>
+          <td><%= @customer.address %></td>
         </tr>
         <tr>
           <th class="table-active">電話番号</th>
