--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,21 +1,23 @@
 <div class='container pt-5'>
   <div class='row'>
     <div class='col-lg'>
-<h1>ショッピングカート</h1>
-</div></div></div>
-　<div style="display: flex; justify-content: flex-end;">
-  <%= link_to "全部削除",  cart_items_destroy_all_path, method: :delete, class: 'btn btn-danger' %>
+     <h1>ショッピングカート</h1>
+    </div>
   </div>
-  <div class='container pt-5'>
-  <div class='row'>
-    <div class='col-lg'>
-<table class="table table-bordered"style="max-width: 1000px;">
-  <thead style="background-color: #ccc;">
-      <th><h4>商品名</h4></th>
-      <th><h4>単価(税込)</h4></th>
-      <th><h4>数量</h4></th>
-      <th><h4>小計</h4></th>
-  </thead>
+</div>
+  <div style="display: flex; justify-content: flex-end;">
+   <%= link_to "全部削除",  cart_items_destroy_all_path, method: :delete, class: 'btn btn-danger' %>
+  </div>
+   <div class='container pt-5'>
+    <div class='row'>
+     <div class='col-lg'>
+      <table class="table table-bordered"style="max-width: 1000px;">
+ <thead style="background-color: #ccc;">
+   <th><h4>商品名</h4></th>
+     <th><h4>単価(税込)</h4></th>
+    <th><h4>数量</h4></th>
+  <th><h4>小計</h4></th>
+</thead>
   <tbody>
   <% @cart_items.each do |cart_item| %>
     <% if cart_item.quantity == 0 %>
@@ -25,7 +27,7 @@
           <span style="font-size:25px"> <%= cart_item.item.name %></span> </td>
            <td><h5><%= (cart_item.item.without_tax_price * 1.1).ceil %></h5></td>
             <td><%= form_for cart_item, url: cart_item_path(cart_item), method: :patch do |f| %>
-            <%= f.select :quantity, options_for_select((1..100).map { |i| [i, i] }, selected: cart_item.quantity) %> 
+            <%= f.select :quantity, options_for_select((1..100).map { |i| [i, i] }, selected: cart_item.quantity) %>
            <%= f.submit "数量の変更を確定" %>
           <% end %>
         </td>
@@ -42,9 +44,9 @@
   　</thead>
       <tr> <td colspan="3">合計金額</td>
       <td><%= @cart_items.sum { |cart_item| (cart_item.item.without_tax_price * 1.1).ceil * cart_item.quantity } %></td>
-    </tr></tbody> 
-</table></div>　
-  
+    </tr></tbody>
+</table></div>
+
 <%= link_to "買い物を続ける", root_path, class: 'btn btn-primary' %></br>
 </br>
 </br>
